# sql-pro

./: .auto-claude-security.json  .env.example  .gitattributes  .gitignore  .npmrc  .prettierignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  README.md  SECURITY.md  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.Jules/: palette.md
.claude/: ralph-loop.local.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-swiftui.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/electron/: CHANGELOG.md  components.json  electron-builder.config.js  electron-builder.yml  electron.vite.config.ts  package.json  (+5 more)
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: generate-icons.fish  icon.icns
apps/tauri/src-tauri/src/: lib.rs  main.rs
apps/tauri/src-tauri/src/commands/: ai.rs  database.rs  export.rs  file.rs  file_watcher.rs  folders.rs  fonts.rs  history.rs  import.rs  menu.rs  mod.rs  password.rs  plugins.rs  pro.rs  profiles.rs  renderer_store.rs  schema.rs  sql_log.rs  store.rs  system.rs  updater.rs  window.rs
apps/tauri/src-tauri/src/services/: database.rs  database_adapters.rs  file_watcher.rs  mod.rs  password.rs
apps/tauri/src-tauri/src/types/: database.rs  export.rs  history.rs  mod.rs  password.rs  store.rs
artifacts/: create_demo.sql  demo.db  generate_image_db.py  image_gallery.db
scripts/: fix-sharp.sh
(+1168 files in other folders)
