[package]
name = "sql-pro"
version = "1.0.0"
description = "SQL Pro - Professional SQLite database manager"
authors = ["kunish <kunish.butt@gmail.com>"]
license = "MIT"
repository = "https://github.com/user/sql-pro"
edition = "2021"

[lib]
name = "sql_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite with SQLCipher support
rusqlite = { version = "0.32", features = ["bundled", "bundled-sqlcipher"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for AI features
reqwest = { version = "0.12", features = ["json", "stream"] }

# File watching
notify = "7"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Note: We use tauri-plugin-store for password storage instead of keyring
# for better reliability across platforms

# Async traits
async-trait = "0.1"

# Base64 encoding
base64 = "0.22"

# Directory utilities
dirs = "5"

# Lazy static for global state
lazy_static = "1"

# System information
sys-info = "0.9"

# Low-level system calls
libc = "0.2"

# For MySQL/PostgreSQL support (optional)
# mysql_async = { version = "0.34", optional = true }
# tokio-postgres = { version = "0.7", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# mysql = ["mysql_async"]
# postgresql = ["tokio-postgres"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
